--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@
 
 set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
-set -s escape-time 5                     # faster command sequences
+set -s escape-time 5                      # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
@@ -19,7 +19,7 @@ bind C-a send-prefix -2
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
 
-set -g history-limit 102400                # boost history
+set -g history-limit 102400               # boost history
 
 # edit configuration
 bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
@@ -30,20 +30,20 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # -- display -------------------------------------------------------------------
 
-set -g base-index 1         # start windows numbering at 1
-setw -g pane-base-index 1   # make pane numbering consistent with windows
+set -g base-index 1           # start windows numbering at 1
+setw -g pane-base-index 1     # make pane numbering consistent with windows
 
-setw -g automatic-rename on # rename window to reflect current program
-set -g renumber-windows off  # renumber windows when a window is closed
+setw -g automatic-rename on   # rename window to reflect current program
+set -g renumber-windows off   # renumber windows when a window is closed
 set-option -g allow-rename off
 
-set -g set-titles on                        # set terminal title
+set -g set-titles on          # set terminal title
 set -g set-titles-string '#h ❐ #S ● #I #W'
 
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
-set -g status-interval 2     # redraw status line every 10 seconds
+set -g status-interval 2      # redraw status line every 10 seconds
 
 # clear both screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.05 && tmux clear-history'
@@ -73,6 +73,9 @@ bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
+
+# maximize current pane
+bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane #{session_name} #D'
 
 # pane resizing
 bind -r H resize-pane -L 2
@@ -126,6 +129,8 @@ run -b 'tmux bind -ct vi-edit Escape cancel 2> /dev/null || true'
 
 bind Enter copy-mode # enter copy mode
 
+#run -b 'tmux bind -t vi-copy y copy-pipe "xclip -sel clip -i"'
+#run -b 'tmux bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"'
 run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
@@ -216,34 +221,17 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 # }
 #
 # _toggle_mouse() {
-#   if tmux show -g -w | grep -q mode-mouse; then
-#     old=$(tmux show -g -w | grep mode-mouse | cut -d' ' -f2)
-#     new=""
+#   old=$(tmux show -gv mouse)
+#   new=""
 #
-#     if [ "$old" = "on" ]; then
-#       new="off"
-#     else
-#       new="on"
-#     fi
-#
-#     tmux set -g mode-mouse $new \;\
-#          set -g mouse-resize-pane $new \;\
-#          set -g mouse-select-pane $new \;\
-#          set -g mouse-select-window $new \;\
-#          display "mouse: $new"
+#   if [ "$old" = "on" ]; then
+#     new="off"
 #   else
-#     old=$(tmux show -g | grep mouse | head -n 1 | cut -d' ' -f2)
-#     new=""
-#
-#     if [ "$old" = "on" ]; then
-#       new="off"
-#     else
-#       new="on"
-#     fi
-#
-#     tmux set -g mouse $new \;\
-#          display "mouse: $new"
+#     new="on"
 #   fi
+#
+#   tmux set -g mouse $new \;\
+#        display "mouse: $new"
 # }
 #
 # _battery() {
@@ -253,9 +241,9 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #     *Darwin*)
 #       while IFS= read -r line; do
 #         if [ x"$discharging" != x"true" ]; then
-#           discharging=$(echo "$line" | grep -qi "discharging" && echo "true" || echo "false")
+#           discharging=$(printf '%s' "$line" | grep -qi "discharging" && echo "true" || echo "false")
 #         fi
-#         percentage=$(echo "$line" | grep -E -o '[0-9]+%')
+#         percentage=$(printf '%s' "$line" | grep -E -o '[0-9]+%')
 #         charge=$(awk -v charge="$charge" -v percentage="${percentage%%%}" 'BEGIN { print charge + percentage / 100 }')
 #         count=$((count + 1))
 #       done  << EOF
@@ -286,9 +274,9 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #       while IFS= read -r line; do
 #         [ -z "$line" ] && continue
 #         if [ x"$discharging" != x"true" ]; then
-#           discharging=$(echo "$line" | awk '{ s = ($1 == 1) ? "true" : "false"; print s }')
+#           discharging=$(printf '%s' "$line" | awk '{ s = ($1 == 1) ? "true" : "false"; print s }')
 #         fi
-#         charge=$(echo "$line" | awk -v charge="$charge" '{ print charge + $2 / 100 }')
+#         charge=$(printf '%s' "$line" | awk -v charge="$charge" '{ print charge + $2 / 100 }')
 #         count=$((count + 1))
 #       done  << EOF
 # $(wmic path Win32_Battery get BatteryStatus, EstimatedChargeRemaining | tr -d '\r' | tail -n +2)
@@ -625,13 +613,13 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   tmux_conf_new_window_retain_current_path=${tmux_conf_new_window_retain_current_path:-false}
 #   while IFS= read -r line; do
 #     [ -z "$line" ] && continue
-#     left=$(echo "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
+#     left=$(printf '%s' "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
 #     if _is_enabled "$tmux_conf_new_window_retain_current_path"; then
-#       right=$(echo "$line" | cut -c"$column-" | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/new-window$/new-window -c "#{pane_current_path}"/g')
+#       right=$(printf '%s' "$line" | cut -c"$column-" | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/new-window$/new-window -c "#{pane_current_path}"/g')
 #     else
-#       right=$(echo "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/-c[ \t]+"#\{pane_current_path\}"$//g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/-c[ \t]+"#\{pane_current_path\}"$//g')
 #     fi
-#     eval "tmux $left $right"
+#     eval "tmux $left $right" 2>/dev/null || true
 #   done  << EOF
 # $(tmux list-keys 2>/dev/null | grep -e 'new-window\(\s\+-c\s\+"#{pane_current_path}\|$\)')
 # EOF
@@ -639,13 +627,13 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   tmux_conf_new_pane_retain_current_path=${tmux_conf_new_pane_retain_current_path:-true}
 #   while IFS= read -r line; do
 #     [ -z "$line" ] && continue
-#     left=$(echo "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
+#     left=$(printf '%s' "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
 #     if _is_enabled "$tmux_conf_new_pane_retain_current_path"; then
-#       right=$(echo "$line" | cut -c"$column-" | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/split-window([ \t]+-(h|v))?$/& -c "#{pane_current_path}"/g')
+#       right=$(printf '%s' "$line" | cut -c"$column-" | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/split-window([ \t]+-(h|v))?$/& -c "#{pane_current_path}"/g')
 #     else
-#       right=$(echo "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/-c[ \t]+"#\{pane_current_path\}"$//g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/-c[ \t]+"#\{pane_current_path\}"$//g')
 #     fi
-#     eval "tmux $left $right"
+#     eval "tmux $left $right" 2>/dev/null || true
 #   done  << EOF
 # $(tmux list-keys 2>/dev/null | grep -e 'split\(-\|_\)window')
 # EOF
@@ -653,13 +641,13 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   tmux_conf_new_pane_reconnect_ssh=${tmux_conf_new_pane_reconnect_ssh:-false}
 #   while IFS= read -r line; do
 #     [ -z "$line" ] && continue
-#     left=$(echo "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
+#     left=$(printf '%s' "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
 #     if _is_enabled "$tmux_conf_new_pane_reconnect_ssh"; then
-#       right=$(echo "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/split-window([^;]+)/run-shell "cut -c3- ~\/\.tmux\.conf | sh -s _split_window #{pane_tty}\1"/g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/split-window([^;]+)/run-shell "cut -c3- ~\/\.tmux\.conf | sh -s _split_window #{pane_tty}\1"/g')
 #     else
-#       right=$(echo "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/run-shell "cut -c3- ~\/\.tmux\.conf \| sh -s _split_window #\{pane_tty\}([^;]+)"/split-window\1/g' -e 's/#\{.+\}/\"&\"/g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/run-shell "cut -c3- ~\/\.tmux\.conf \| sh -s _split_window #\{pane_tty\}([^;]+)"/split-window\1/g' -e 's/#\{.+\}/\"&\"/g')
 #     fi
-#     eval "tmux $left $right"
+#     eval "tmux $left $right" 2>/dev/null || true
 #   done  << EOF
 # $(tmux list-keys 2>/dev/null | grep -e 'split\(-\|_\)window')
 # EOF
@@ -667,13 +655,13 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   tmux_conf_new_session_prompt=${tmux_conf_new_session_prompt:-false}
 #   while IFS= read -r line; do
 #     [ -z "$line" ] && continue
-#     left=$(echo "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
+#     left=$(printf '%s' "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
 #     if _is_enabled "$tmux_conf_new_session_prompt"; then
-#       right=$(echo "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/new-session$/command-prompt -p new-session \"new-session -s %%\"/g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/new-session$/command-prompt -p new-session \"new-session -s %%\"/g')
 #     else
-#       right=$(echo "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }'| sed -E -e 's/command-prompt -p new-session[^;]+/new-session/g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }'| sed -E -e 's/command-prompt -p new-session[^;]+/new-session/g')
 #     fi
-#     eval "tmux $left $right"
+#     eval "tmux $left $right" 2>/dev/null || true
 #   done  << EOF
 # $(tmux list-keys 2>/dev/null | grep -e 'new-session')
 # EOF
@@ -686,25 +674,28 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   command -v clip.exe > /dev/null 2>&1 && command='clip\.exe'
 #   [ -c /dev/clipboard ] && command='cat > \/dev\/clipboard'
 #
-#   # shellcheck disable=SC2086
-#   for table in "" "-t emacs-copy" "-t vi-copy"; do
-#     line=$(tmux list-keys $table 2>/dev/null | grep -e 'copy-selection\|copy-pipe' | head -1)
-#     prefix=${line%copy-*}
-#     column=${#prefix}
-#
-#     while IFS= read -r line; do
+#   if [ -n "$command" ]; then
+#     # shellcheck disable=SC2086
+#     for table in "" "-t emacs-copy" "-t vi-copy"; do
+#       line=$(tmux list-keys $table 2>/dev/null | grep -e 'copy-selection\|copy-pipe' | head -1)
+#       prefix=${line%copy-*}
+#       column=${#prefix}
 #       [ -z "$line" ] && continue
-#       left=$(echo "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
-#       if _is_enabled "$tmux_conf_copy_to_os_clipboard"; then
-#         right=$(echo "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e "s/copy-selection(-and-cancel)?$/copy-pipe\1 \"$command\"/g")
-#       else
-#         right=$(echo "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e "s/copy-pipe(-and-cancel)? \"$command\"$/copy-selection\1/g")
-#       fi
-#       eval "tmux $left $right"
-#     done  << EOF
+#
+#       while IFS= read -r line; do
+#         [ -z "$line" ] && continue
+#         left=$(printf '%s' "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
+#         if _is_enabled "$tmux_conf_copy_to_os_clipboard"; then
+#           right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e "s/copy-selection(-and-cancel)?$/copy-pipe\1 \"$command\"/g")
+#         else
+#           right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e "s/copy-pipe(-and-cancel)? \"$command\"$/copy-selection\1/g")
+#         fi
+#         eval "tmux $left $right" 2>/dev/null || true
+#       done  << EOF
 # $(tmux list-keys $table 2>/dev/null | grep -e 'copy-selection\|copy-pipe')
 # EOF
-#   done
+#     done
+#  fi
 # }
 #
 # _apply_theme() {
